# Application-Tracker

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
.github/workflows/: tests.yml
database_setup/: create_db.py  schema.sql
docs/: ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  SCHEMA.md
job_tracker/: __init__.py
job_tracker/analytics/: __init__.py  analytics_service.py  reporting.py
job_tracker/cli/: __init__.py  __main__.py  interactive.py  main.py  menu.py
job_tracker/database/: README.md  __init__.py  connection.py  exceptions.py  init_db.py  logger.py  query_executor.py  transaction.py
job_tracker/domain/: __init__.py  exceptions.py
job_tracker/models/: __init__.py  application.py  application_event.py  application_status.py  base.py  company.py  position.py  recruiter.py
job_tracker/services/: __init__.py  application_service.py  base_service.py  company_service.py  crud_service.py  event_service.py  position_service.py  query_options.py  recruiter_service.py  status_service.py
job_tracker/streamlit_app/: __init__.py  cache.py  main.py  style.py
job_tracker/tui/: __init__.py  __main__.py  app.py
job_tracker/use_cases/: __init__.py  application_flow.py
job_tracker/utils/: __init__.py  colors.py  config.py  logger.py
scripts/: README.md  seed_data.py  verify_installation.py
tests/analytics/: test_analytics_service.py  test_reporting.py
tests/cli/: test_cli_smoke.py  test_tui_smoke.py
tests/database/: test_database_layer.py  test_init.py
tests/integration/: __init__.py  test_happy_path_flow.py
(+13 files in other folders)
